--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "regex_tester",
   "version": "0.1.0",
-  "homepage": "https://kkgh.github.io/regex_tester/",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
